kubernetes/apps/kerberos/vault/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: kerberos-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: uugai/vault:latest
        imagePullPolicy: Always
        #resources:
        #  limits:
        #    memory: 4096Mi
        #    cpu: 2000m
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        ports:
          - containerPort: 80
