kubernetes/apps/kerberos/vault/app/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-svc
  namespace: kerberos
  labels:
    app: vault-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
    protocol: TCP
  selector:
    app: vault
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: kerberos
  labels:
    name: vault-ingress
    app.kubernetes.io/name: kerberos-vault
    kustomize.toolkit.fluxcd.io/name: kerberos
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gs-farm.net
    kubernetes.io/ingress.class: external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "vault.gs-farm.net"
      secretName: factory-tls
  rules:
    - host: vault.gs-farm.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vault-svc
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - ip: 10.10.1.152
